--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         </section>
         <section id="how">
-            <div class="container container-camp p-5 text-bg-warning">
+            <div class="container container-camp p-5 text-center bg-warning">
                 <h2 class="pd-5">応募方法</h2>
                 <div class="row g-4">
                     <div class="col-sm-12 col-md-4">
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-sm-12 col-md-4">
                         <div class="rounded-4 p-4 bg-white">
-                        <img src="images/pic_cam_02.png" alt="" class="img-fluid md-5">
+                        <img src="images/pic_cam_02.png" alt="" class="img-fluid mb-5">
                         <p class="text-start">ハッシュタグ「＃タルトの日」を付けてツイートする。（個人情報は投稿しないようご注意ください）</p>
                         <button type="button" class="btn btn-danger btn-lg">ツイートする</button>
                     </div>
